# Sim_Money

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/adr/: ADR-000-endgame.md  ADR-001-domain-levels.md  ADR-002-similarity-strategy-pattern.md  ADR-003-backtest-l3-activation.md  ADR-004-portfolio-l3-activation.md  ADR-005-l3-horizontal-dependency.md  ADR-006-risk-l3-activation.md  ADR-007-exit-advisor.md
docs/plans/: M2-plan.md  M5-plan.md  Sim_Money-plan.md
docs/retros/: M1-retrospective.md
scripts/: env-check.js  seed_market_data.py
src/backtest/: README.md
src/backtest/adapters/: __init__.py
src/backtest/adapters/inbound/: __init__.py
src/backtest/adapters/outbound/: __init__.py  in_memory_backtest_engine.py  in_memory_trade_executor.py  portfolio_position_sizer.py  ratio_performance_calculator.py  risk_entry_filter.py  risk_exit_advisor.py  risk_session_state.py  strength_position_sizer.py
src/backtest/application/: __init__.py
src/backtest/application/ports/: __init__.py  backtest_engine.py  entry_filter.py  exit_advisor.py  performance_calculator.py  position_sizer.py  signal_source.py  trade_executor.py
src/backtest/application/use_cases/: __init__.py  run_backtest.py
src/backtest/domain/: __init__.py  backtest_config.py  metrics.py  position.py  price_bar.py  result.py  signal.py  trade.py
src/market_data/adapters/outbound/: duckdb_price_repository.py  finance_data_reader_source.py
src/market_data/application/: ingest_prices.py  ports.py
src/market_data/domain/: __init__.py  adjusted_price.py  errors.py  log_return.py  market.py  price_series.py  ticker.py
src/portfolio/: README.md
src/portfolio/adapters/: __init__.py
src/portfolio/adapters/outbound/: __init__.py  equal_weight_strategy.py  risk_weight_cap_validator.py  score_weighted_strategy.py
src/portfolio/application/ports/: weight_cap_validator.py  weighting_strategy.py
src/portfolio/application/use_cases/: __init__.py  compute_target_weights.py  plan_rebalance.py
src/portfolio/domain/: constraints.py  errors.py  position.py  rebalance_plan.py  weight.py
src/risk/: README.md  __init__.py
src/risk/adapters/outbound/: __init__.py  daily_loss_limit_guard.py  drawdown_circuit_breaker.py  position_limit_guard.py  stop_loss_guard.py
src/risk/application/ports/: risk_guard.py
src/risk/application/use_cases/: __init__.py  evaluate_risk.py
src/risk/domain/: __init__.py  context.py  decisions.py  errors.py
src/sim_money.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/similarity/adapters/inbound/: _signal_conversion.py  fastapi_app.py  main.py
src/similarity/application/: find_similar_tickers.py  ports.py
src/similarity/domain/: cointegration.py  cointegration_strategy.py  correlation.py  pearson.py  spearman.py  spearman_strategy.py  weighted_sum_strategy.py
src/trading/: README.md  __init__.py
src/trading_signal/: README.md  __init__.py
src/trading_signal/adapters/: __init__.py
src/trading_signal/adapters/inbound/: __init__.py
src/trading_signal/application/: __init__.py
src/trading_signal/domain/: __init__.py  pair.py  side.py  trading_signal.py  zscore.py
src/universe/application/: ports.py
src/universe/domain/: universe_snapshot.py
tests/api/: __init__.py  test_backtest_endpoint.py  test_compute_weights_endpoint.py  test_rebalance_endpoint.py
tests/architecture/: test_layer_boundaries.py
tests/backtest/: test_backtest_skeleton.py  test_ports_protocol.py  test_value_objects.py
tests/backtest/adapters/: test_in_memory_backtest_engine.py  test_in_memory_trade_executor.py  test_portfolio_position_sizer.py  test_ratio_performance_calculator.py  test_risk_entry_filter.py  test_strength_position_sizer.py
tests/backtest/application/: test_run_backtest.py
tests/backtest/domain/: __init__.py  test_backtest_config.py
tests/backtest/integration/: test_backtest_golden_cases.py  test_backtest_group_sizing.py  test_backtest_risk_golden.py  test_backtest_with_portfolio.py  test_exit_advisor_golden.py
tests/market_data/application/: test_ingest_prices.py
tests/market_data/domain/: test_log_return.py  test_price_series.py  test_ticker.py
tests/portfolio/adapters/: __init__.py  test_equal_weight_strategy.py  test_risk_weight_cap_validator.py  test_score_weighted_strategy.py
tests/portfolio/application/: test_compute_target_weights.py  test_plan_rebalance.py
tests/portfolio/domain/: test_constraints.py  test_errors.py  test_rebalance_plan.py  test_weight.py
tests/risk/adapters/: test_daily_loss_limit_guard.py  test_drawdown_circuit_breaker.py  test_position_limit_guard.py  test_stop_loss_guard.py
tests/risk/application/: test_evaluate_risk.py
tests/risk/domain/: test_context.py  test_decisions.py
tests/similarity/: test_golden_regression.py
tests/similarity/application/: test_find_similar_tickers.py  test_similarity_strategy_port.py
tests/similarity/domain/: test_cointegration.py  test_cointegration_strategy.py  test_correlation.py  test_pearson.py  test_spearman.py  test_spearman_strategy.py  test_weighted_sum_strategy.py
tests/similarity/fixtures/: golden_returns.py
tests/smoke/: test_create_app_factory.py
tests/trading_signal/adapters/: test_pair_trading_signal_source.py
tests/trading_signal/application/: test_generate_pair_signals.py
tests/trading_signal/domain/: test_pair.py  test_trading_signal.py  test_zscore.py
tests/universe/application/: test_universe_source_port.py
tests/universe/domain/: test_universe_snapshot.py
web/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: PairChart.tsx  globals.css  layout.tsx  page.tsx
web/app/_components/: ParamHelp.tsx  SimilarityHeatmap.tsx  SimilarityScatter.tsx  SymbolPicker.tsx  SymbolSelect.tsx
web/app/backtest/: BacktestResult.tsx  page.tsx
web/app/batch/: page.tsx
web/app/rebalance/: page.tsx
(+9 files in other folders)
