[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-money"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "finance-datareader>=0.9.96",
    "pandas>=2.2",
    "duckdb>=1.0",
    "numpy>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "import-linter>=2.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.importlinter]
root_packages = ["market_data", "universe", "similarity", "portfolio", "trading_signal", "backtest", "trading", "risk"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "L2 packages must not import L3 packages"
type = "forbidden"
source_modules = ["market_data", "universe", "similarity"]
forbidden_modules = ["portfolio", "trading_signal", "backtest", "trading", "risk"]
# WHY: similarity.adapters.inbound 은 헥사고날 조립 루트(composition root)로
#      HTTP 경계에서 L3 유스케이스/어댑터를 조립해 노출한다. L2 도메인/어플리케이션
#      순수성 규칙의 예외이며, 실질 리스크는 헥사고날 layers 계약으로 대체 방어한다.
ignore_imports = [
    "similarity.adapters.inbound.* -> backtest.**",
    "similarity.adapters.inbound.* -> trading_signal.**",
]

[[tool.importlinter.contracts]]
name = "market_data domain must not import adapters"
type = "forbidden"
source_modules = ["market_data.domain"]
forbidden_modules = ["market_data.adapters"]

[[tool.importlinter.contracts]]
name = "universe domain must not import adapters"
type = "forbidden"
source_modules = ["universe.domain"]
forbidden_modules = ["universe.adapters"]

[[tool.importlinter.contracts]]
name = "trading_signal hexagonal layers"
type = "layers"
layers = [
    "trading_signal.adapters",
    "trading_signal.application",
    "trading_signal.domain",
]
exhaustive = false

[[tool.importlinter.contracts]]
name = "trading_signal domain/application purity (no pandas/numpy)"
type = "forbidden"
source_modules = ["trading_signal.domain", "trading_signal.application"]
forbidden_modules = ["pandas", "numpy"]

[[tool.importlinter.contracts]]
name = "backtest hexagonal layers"
type = "layers"
layers = [
    "backtest.adapters",
    "backtest.application",
    "backtest.domain",
]
exhaustive = false

[[tool.importlinter.contracts]]
name = "backtest domain/application purity (no pandas/numpy)"
type = "forbidden"
source_modules = ["backtest.domain", "backtest.application"]
forbidden_modules = ["pandas", "numpy"]
